fix: delete useless property

--- a/packages/carousel/demo/pages/index/index.wxml
+++ b/packages/carousel/demo/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <comp
     height="{{height}}"
-    original-list="{{imgList}}"
+    thumbnail-list="{{imgList}}"
     duration="{{duration}}"
     image-mode="{{imageMode}}"
     indicator-type="{{indicatorType}}"
