--- a/packages/steps/tools/demo/pages/index/index.wxss
+++ b/packages/steps/tools/demo/pages/index/index.wxss
@@ -1,5 +1,8 @@
 .panel-group {
   background-color: #ccc;
+}
+
+.panel-group:not(:last-child) {
   margin-bottom: 30px;
 }
 
@@ -10,4 +13,25 @@
 
 .panel-control {
   padding: 30px;
+}
+
+.panel-properties {
+  padding: 0 30px 30px;
+  font-size: 14px;
+}
+
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 1;
+}
+
+.column:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.column:last-child {
+  flex: 60px 0 0;
 }
