--- a/packages/steps/src/index.wxml
+++ b/packages/steps/src/index.wxml
@@ -1,10 +1,20 @@
 <view class="modo-steps">
   <block wx:for="{{steps}}" wx:key="{{index}}">
-    <view  class="modo-step__item {{index <= active ? 'active' : ''}}">
-      <view 
-        class="modo-step__content"
-        style="{{index <= active && activeColor ? 'background-color:'+activeColor : ''}}">
-        {{item.text}}
+    <view  class="modo-step__item">
+      <view class="modo-step__content">
+
+        <view
+          class="modo-step__content--img"
+          wx:if="{{index < active}}">
+          <image src="{{doneImg}}" mode="aspectFit"></image>  
+        </view>
+        <view
+          class="modo-step__content--text {{index === active ? 'active' : ''}}"
+          style="{{index === active && activeColor ? 'background-color:'+activeColor : ''}}"
+          wx:else>
+          {{item.text}}
+        </view>
+
       </view>
       <view 
         class="modo-step__line" 
