--- a/packages/carousel/src/index.wxss
+++ b/packages/carousel/src/index.wxss
@@ -1,30 +1,38 @@
 @import '../../../styles/mixins/';
 
-@include b(block) {
-  @include clearfix();
+%carouselSize {
+  width: 100vw;
+  height: 100%;
 }
 
-.carousel__wrapper {
-	position: relative;
-}
+@include b(carousel) {
+  @extend %carouselSize;
 
-.carousel,
-.carousel__item,
-.carousel__item__image {
-	width: 100vw;
-	height: 100%;
-}
+  @include e(wrapper) {
+    position: relative;
+  }
 
-.carousel__indicator--fraction {
-	position: absolute;
-	right: 30rpx;
-	bottom: 30rpx;
-	line-height: 1;
-	min-width: 80rpx;
-	padding: 11rpx 15rpx;
-	font-size: 22rpx;
-	color: #fff;
-	background: rgba(0, 0, 0, 0.3);
-	border-radius: 48rpx;
-	text-align: center;
+  @include e(item) {
+    @extend %carouselSize;
+
+    @include e(image) {
+      @extend %carouselSize;
+    }
+  }
+
+  @include e(indicator) {
+    @include m(fraction) {
+      position: absolute;
+      right: 30rpx;
+      bottom: 30rpx;
+      line-height: 1;
+      min-width: 80rpx;
+      padding: 11rpx 15rpx;
+      font-size: 22rpx;
+      color: #fff;
+      background: rgba(0, 0, 0, 0.3);
+      border-radius: 48rpx;
+      text-align: center;
+    }
+  }
 }
