--- a/packages/navigationBar/src/index.wxml
+++ b/packages/navigationBar/src/index.wxml
@@ -1,13 +1,13 @@
 <view
-    class="navigation-bar"
+    class="modo-navigation-bar"
     style="{{navigationBarStyle}}; padding-top: {{systemData.statusBarHeight}}px; height: {{systemData.headerBarHeight}}px;">
     <image
         wx:if="{{currentIcon}}"
         bind:tap="handleLeftPage"
-        class="navigation-bar__icon"
+        class="modo-navigation-bar__icon"
         src="{{currentIcon}}">
     </image>
-    <view class="navigation-bar__title">
+    <view class="modo-navigation-bar__title">
         <slot name="title"></slot>
     </view>
 </view>
