chore: update tpl

--- a/packages/bottomSheetDialog/src/index.wxml
+++ b/packages/bottomSheetDialog/src/index.wxml
@@ -1,6 +1,1 @@
-<mask
-    mask-status="{{dialogStatus}}"
-    duration="{{duration}}"
-    bg-color="{{bgColor}}">
-    <view slot="content">{{title}}</view>
-</mask>
+<view class="index other">{{prop}}-{{flag}}</view>
